# routes/index.js
@@ -3,9 +3,8 @@ const router = express.Router()
 
 const listing = require('./listing.js')
 
-// router.get("/listings", listing.get);
-// router.get("/listings/:_id", listing.getById);
-router.get("/listings/:city", listing.getPostByCity);
+router.get("/listings", listing.get);
+router.get("/listings/:_id", listing.getById);
 router.post("/listings", listing.post);
 router.put("/listings/:_id", listing.put);
 router.delete("/listings/:_id", listing.deleteing);
