# swagger/swagger.yaml
@@ -15,6 +15,13 @@ paths:
       operationId: listListings
       tags:
       - listings
+      parameters:
+      - name: city
+        in: query
+        description: filter by city
+        required: false
+        schema:
+          type: string
       responses:
         '200':
           description: Array of listings
@@ -160,8 +167,7 @@ components:
         monthlyFee:
           type: number
         bidding:
-            type: boolean
-
+          type: boolean
     ResponseListing:
       allOf:
       - $ref: "#/components/schemas/Listing"
